--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,13 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   cupertino_icons: ^1.0.8
+  expressions: ^0.2.5+2
+  flutter_launcher_icons: ^0.14.1
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/splash.svg
-    - assets/logo.svg
+    - assets/Images/splash.svg
+    - assets/Images/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
