--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,6 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-
-/lib/main - Copy supiri
-/lib/oldmain.dart
+# Ignore specific files
+main - Copy supiri.dart
+oldmain.dart
