--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Images/splash.svg
-    - assets/Images/logo.svg
+    - assets/Images/logo.png
+    - assets/Images/splash-mobile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
