--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   expressions: ^0.2.5+2
   flutter_launcher_icons: ^0.14.1
+  device_preview: ^1.2.0
 
 flutter_icons:
   android: true
