--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   expressions: ^0.2.5+2
   flutter_launcher_icons: ^0.14.1
-  device_preview: ^1.2.0
 
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/icon.png"
+  image_path: "assets/images/icon.ico"
 
 dev_dependencies:
   flutter_test:
